--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_BASE_PATH = "https://rikkilanz.github.io/forward-nextjs-app/"
+NEXT_PUBLIC_BASE_PATH = "https://rikkilanz.github.io/forward-nextjs-app"
